[gd_scene load_steps=5 format=3 uid="uid://dxlev4yodyc4x"]

[ext_resource type="Script" uid="uid://cfuwdp8hvx7xr" path="res://Player/Attack/ice_spikes.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dq6yl0ex32gqg" path="res://Textures/Items/Weapons/ice.png" id="2"]
[ext_resource type="AudioStream" uid="uid://crrfybrxvfulq" path="res://Audio/SoundEffect/ice-collecting-01 (mp3cut.net).mp3" id="3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_IceSpikes"]
radius = 30.0


[node name="IceSpikes" type="Area2D" groups=["attack"]]
collision_layer = 0
collision_mask = 10
script = ExtResource("1")


[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(0.51, 0.5)
texture = ExtResource("2")


[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_IceSpikes")


[node name="DamageTickTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = false


[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = false


[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")
autoplay = true


[connection signal="timeout" from="DamageTickTimer" to="." method="_on_damage_tick_timer_timeout"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
